src/Parser.java
/* Generated By:JavaCC: Do not edit this line. Parser.java */
import java.util.ArrayList;
import java.io.File;
import java.io.FilenameFilter;
import java.util.Arrays;


public class Parser implements ParserConstants {

                        public static void main(String[] args) {
                                 final String dir = "tests";
                                 final File[] files = new File(dir).listFiles(new FilenameFilter() {
                                     public boolean accept(File dir, String filename)
                                     { return filename.endsWith(".sl"); }
                                 });
                                Arrays.sort(files);
                                 for (File f : files) {
//                                    File f = new File("tests/Object.sl");
                                     try {
                                         System.out.println("=====\u005cn= Parsing file " + f.getPath() + "=\u005cn=====");
                                         Program p = new Parser(new java.io.FileInputStream(f.getPath())).translationUnit();
                                         System.out.println(p.toString());
                                         System.out.println("======\u005cn\u005cn");
                                     } catch (Exception e) {
                                         System.out.println("Failed to parse " + f);
                                         e.printStackTrace();
                                     }
                                 }
                         }

/////////////////////////////////////////////////////////
//       The uri syntactic grammar starts here         //
/////////////////////////////////////////////////////////


// Parse a compilation unit
//       translationUnit ::= {function}
  final public Program translationUnit() throws ParseException {
                            ArrayList<Function> functions; Function aFunction;
      functions = new ArrayList<Function>();
    try {
      label_1:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case FUNCTION:
          ;
          break;
        default:
          jj_la1[0] = jj_gen;
          break label_1;
        }
        aFunction = function();
              functions.add(aFunction);
      }
      jj_consume_token(0);
    } catch (ParseException e) {
        System.out.println("Failed to parse translationUnit");
        e.printStackTrace();
    }
      {if (true) return new Program(functions);}
    throw new Error("Missing return statement in function");
  }

// Parse a qualified identifier.
//   qualifiedIdentifier ::= IDENTIFIER {DOT IDENTIFIER}
  final public Node qualifiedIdentifier() throws ParseException {
    String qualifiedIdentifier = "";
    try {
      jj_consume_token(IDENTIFIER);
            qualifiedIdentifier = token.image;
      label_2:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case DOT:
          ;
          break;
        default:
          jj_la1[1] = jj_gen;
          break label_2;
        }
        jj_consume_token(DOT);
        jj_consume_token(IDENTIFIER);
              qualifiedIdentifier += "." + token.image;
      }
    } catch (ParseException e) {
        System.out.println("Failed to parse qualifiedIdentifier");
        e.printStackTrace();
    }
      {if (true) return new QualifiedIdentifier(qualifiedIdentifier);}
    throw new Error("Missing return statement in function");
  }

// Parse a function
//      Function ::= FUNCTION IDENTIFIER LPAREN [IDENTIFIER {COMMA IDENTIFIER}] RPAREN Block
  final public Function function() throws ParseException {
                      String name; ArrayList<Node> args;
      args = new ArrayList<Node>(); name = "";
    try {
      jj_consume_token(FUNCTION);
      jj_consume_token(IDENTIFIER);
                              name = token.image;
      args = arguments();
    } catch (ParseException e) {
        System.out.println("Failed to parse Function");
        e.printStackTrace();
    }
      {if (true) return new Function(name, args, block());}
    throw new Error("Missing return statement in function");
  }

// Parse a block
//      Block ::= LCURLY {blockStatement} RCURLY
  final public Block block() throws ParseException {
                ArrayList<Node> statements; Node aStatement;
      statements = new ArrayList<Node>();
    try {
      jj_consume_token(LCURLY);
      label_3:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case RETURN:
        case IF:
        case WHILE:
        case LPAREN:
        case LCURLY:
        case IDENTIFIER:
        case INT_LITERAL:
        case STRING_LITERAL:
          ;
          break;
        default:
          jj_la1[2] = jj_gen;
          break label_3;
        }
        aStatement = blockStatement();
              statements.add( aStatement );
      }
      jj_consume_token(RCURLY);
    } catch (ParseException e) {
        System.out.println("Failed to parse block");
        e.printStackTrace();
    }
      {if (true) return new Block(statements);}
    throw new Error("Missing return statement in function");
  }

// Parse a  blockStatement
//      blockStatement ::= variableDeclarator | statement
  final public Node blockStatement() throws ParseException {
    Node statement = null;
    try {
      if (jj_2_1(2147483647)) {
        statement = variableDeclarator();
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case RETURN:
        case IF:
        case WHILE:
        case LPAREN:
        case LCURLY:
        case IDENTIFIER:
        case INT_LITERAL:
        case STRING_LITERAL:
          statement = statement();
          break;
        default:
          jj_la1[3] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    } catch (ParseException e) {
        System.out.println("Failed to parse blockStatement");
        e.printStackTrace();
    }
      {if (true) return statement;}
    throw new Error("Missing return statement in function");
  }

// Parse a variableDeclarator
//      variableDeclarator ::= IDENTIFIER [ASSIGN expression] SEMI
  final public Variable variableDeclarator() throws ParseException {
                                Node expr = null; int line = 0; String name = ""; String value = "";
    try {
      jj_consume_token(IDENTIFIER);
                        line = token.beginLine; name = token.image;
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ASSIGN:
        jj_consume_token(ASSIGN);
        expr = expression();
                                           value = expr.toString();
        break;
      default:
        jj_la1[4] = jj_gen;
        ;
      }
      jj_consume_token(SEMI);
    } catch (ParseException e) {
        System.out.println("Failed to parse variableDeclarator for variable " + name);
        e.printStackTrace();
    }
      {if (true) return new Variable(name, value);}
    throw new Error("Missing return statement in function");
  }

// Parse arguments.
//      arguments ::= LPAREN [expression {COMMA expression}] RPAREN
  final public ArrayList<Node> arguments() throws ParseException {
    ArrayList<Node> args = new ArrayList<Node>();
    Node anExpression = null;
    try {
      jj_consume_token(LPAREN);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LPAREN:
      case IDENTIFIER:
      case INT_LITERAL:
      case STRING_LITERAL:
        anExpression = expression();
                                          args.add( anExpression );
        label_4:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case COMMA:
            ;
            break;
          default:
            jj_la1[5] = jj_gen;
            break label_4;
          }
          jj_consume_token(COMMA);
          anExpression = expression();
                  args.add( anExpression );
        }
        break;
      default:
        jj_la1[6] = jj_gen;
        ;
      }
      jj_consume_token(RPAREN);
    } catch (ParseException e) {
        System.out.println("Failed to parse arguments");
        e.printStackTrace();
    }
      {if (true) return args;}
    throw new Error("Missing return statement in function");
  }

  final private Node parExpression() throws ParseException {
    Node expr = null;
    try {
      jj_consume_token(LPAREN);
      expr = expression();
      jj_consume_token(RPAREN);
    } catch (ParseException e) {
        System.out.println("Failed to parse parExpression");
        e.printStackTrace();
    }
      {if (true) return expr;}
    throw new Error("Missing return statement in function");
  }

// Parse a statement
//     statement ::= block
//                | IF parExpression statement [ELSE statement]
//                | WHILE parExpression statement
//                | RETURN [expression] SEMI
//                | SEMI
//                | expression SEMI // TODO validate side effects
  final public Node statement() throws ParseException {
    Node stmt = null;
    Node expr = null;
    Node cond = null;
    Node body = null;
    Node ifel = null;
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LCURLY:
        stmt = block();
        break;
      case IF:
        jj_consume_token(IF);
                 cond = parExpression(); body = statement();
        if (jj_2_2(2147483647)) {
          jj_consume_token(ELSE);
          ifel = statement();
        } else {
          ;
        }
          stmt = new If(cond, body, ifel);
        break;
      case WHILE:
        jj_consume_token(WHILE);
        cond = parExpression();
        body = statement();
          stmt = new While(cond, body);
        break;
      case RETURN:
        jj_consume_token(RETURN);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case LPAREN:
        case IDENTIFIER:
        case INT_LITERAL:
        case STRING_LITERAL:
          expr = expression();
          break;
        default:
          jj_la1[7] = jj_gen;
          ;
        }
        jj_consume_token(SEMI);
          stmt = new Return(expr);
        break;
      case LPAREN:
      case IDENTIFIER:
      case INT_LITERAL:
      case STRING_LITERAL:
        stmt = expression();
        jj_consume_token(SEMI);
        break;
      default:
        jj_la1[8] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (ParseException e) {
        System.out.println("Failed to parse statement");
        e.printStackTrace();
    }
      {if (true) return stmt;}
    throw new Error("Missing return statement in function");
  }

// Parse an expression
//  expression ::= assignmentExpression
  final public Node expression() throws ParseException {
    Node expr = null; String id = null; ArrayList<String> args = null;
    try {
      expr = assignmentExpression();
    } catch (ParseException e) {
        System.out.println("Failed to parse an expression");
        e.printStackTrace();
    }
      {if (true) return expr;}
    throw new Error("Missing return statement in function");
  }

// Parse an assignment expression.
//      assignmentExpression ::= conditionalOrExpression  // level 13
//                               [(ASSIGN) assignmentExpression]
  final public Node assignmentExpression() throws ParseException {
    Node lhs = null, rhs = null;
    try {
      lhs = conditionalOrExpression();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ASSIGN:
        jj_consume_token(ASSIGN);
        rhs = assignmentExpression();
              lhs = new Variable(lhs.toString(), rhs.toString());
        break;
      default:
        jj_la1[9] = jj_gen;
        ;
      }
    } catch (ParseException e) {
        System.out.println("Failed to parse assignmentExpression");
        e.printStackTrace();
    }
      {if (true) return lhs;}
    throw new Error("Missing return statement in function");
  }

// Parse a conditional-or expression.
//      conditionalOrExpression ::= conditionalAndExpression // level 11
//                                  {LOR conditionalAndExpression}
  final public Node conditionalOrExpression() throws ParseException {
    Node lhs = null, rhs = null;
    try {
      lhs = conditionalAndExpression();
      label_5:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case LOR:
          ;
          break;
        default:
          jj_la1[10] = jj_gen;
          break label_5;
        }
        jj_consume_token(LOR);
        rhs = conditionalAndExpression();
              lhs = new BinaryExpression(lhs, rhs, tokenImage[LOR]);
      }
    } catch (ParseException e) {
        System.out.println("Failed to parse conditionalOrExpression");
        e.printStackTrace();
    }
      {if (true) return lhs;}
    throw new Error("Missing return statement in function");
  }

// Parse a conditional-and expression.
// conditionalAndExpression ::= inclusiveOrExpression // level 10
//                              {LAND inclusiveOrExpression}
  final public Node conditionalAndExpression() throws ParseException {
    Node lhs = null, rhs = null;
    try {
      lhs = equalityExpression();
      label_6:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case LAND:
          ;
          break;
        default:
          jj_la1[11] = jj_gen;
          break label_6;
        }
        jj_consume_token(LAND);
        rhs = equalityExpression();
              lhs = new BinaryExpression(lhs, rhs, tokenImage[LAND]);
      }
    } catch (ParseException e) {
        System.out.println("Failed to parse conditionalAndExpression");
        e.printStackTrace();
    }
      {if (true) return lhs;}
    throw new Error("Missing return statement in function");
  }

// Parse an equality expression.
//  equalityExpression ::= relationalExpression  // level 6
//                          {(EQUAL|NOT_EQUAL) relationalExpression}
  final public Node equalityExpression() throws ParseException {
    Node lhs = null, rhs = null;
    String op = null;
    try {
      lhs = relationalExpression();
      label_7:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case EQUAL:
        case NOT_EQUAL:
          ;
          break;
        default:
          jj_la1[12] = jj_gen;
          break label_7;
        }
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case EQUAL:
          jj_consume_token(EQUAL);
          rhs = relationalExpression();
              lhs = new BinaryExpression(lhs, rhs, tokenImage[EQUAL]);
          break;
        case NOT_EQUAL:
          jj_consume_token(NOT_EQUAL);
          rhs = relationalExpression();
              lhs = new BinaryExpression(lhs, rhs, tokenImage[NOT_EQUAL]);
          break;
        default:
          jj_la1[13] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    } catch (ParseException e) {
        System.out.println("Failed to parse equalityExpression");
        e.printStackTrace();
    }
      {if (true) return lhs;}
    throw new Error("Missing return statement in function");
  }

// Parse a relational expression.
//
//   relationalExpression ::= primary  // level 5
//                          [ (GT | LT | GE | LE) primary
  final public Node relationalExpression() throws ParseException {
    Node lhs = null, rhs = null;
    String op = null;
    try {
      lhs = additiveExpression();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case GT:
      case GE:
      case LT:
      case LE:
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case GT:
          jj_consume_token(GT);
          rhs = additiveExpression();
              lhs = new BinaryExpression(lhs, rhs, tokenImage[GT]);
          break;
        case LT:
          jj_consume_token(LT);
          rhs = additiveExpression();
              lhs = new BinaryExpression(lhs, rhs, tokenImage[LT]);
          break;
        case GE:
          jj_consume_token(GE);
          rhs = additiveExpression();
              lhs = new BinaryExpression(lhs, rhs, tokenImage[GE]);
          break;
        case LE:
          jj_consume_token(LE);
          rhs = additiveExpression();
              lhs = new BinaryExpression(lhs, rhs, tokenImage[LE]);
          break;
        default:
          jj_la1[14] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        break;
      default:
        jj_la1[15] = jj_gen;
        ;
      }
    } catch (ParseException e) {
        System.out.println("Failed to parse relationalExpression");
        e.printStackTrace();
    }
      {if (true) return lhs;}
    throw new Error("Missing return statement in function");
  }

// Parse an additive expression.
//      additiveExpression ::= multiplicativeExpression // level 3
//                          {(PLUS|MINUS) multiplicativeExpression}
  final public Node additiveExpression() throws ParseException {
    Node lhs = null, rhs = null;
    try {
      lhs = multiplicativeExpression();
      label_8:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case PLUS:
        case MINUS:
          ;
          break;
        default:
          jj_la1[16] = jj_gen;
          break label_8;
        }
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case PLUS:
          jj_consume_token(PLUS);
          rhs = multiplicativeExpression();
              lhs = new BinaryExpression(lhs, rhs, tokenImage[PLUS]);
          break;
        case MINUS:
          jj_consume_token(MINUS);
          rhs = multiplicativeExpression();
              lhs = new BinaryExpression(lhs, rhs, tokenImage[MINUS]);
          break;
        default:
          jj_la1[17] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    } catch (ParseException e) {
        System.out.println("Failed to parse additiveExpression");
        e.printStackTrace();
    }
      {if (true) return lhs;}
    throw new Error("Missing return statement in function");
  }

// Parse a multiplicative expression.
//  multiplicativeExpression ::= unaryExpression  // level 2
//                              {(STAR|DIV) unaryExpression}
  final public Node multiplicativeExpression() throws ParseException {
    int line = 0;
    Node lhs = null, rhs = null;
    try {
      lhs = primary();
      label_9:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case STAR:
        case DIV:
          ;
          break;
        default:
          jj_la1[18] = jj_gen;
          break label_9;
        }
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case STAR:
          jj_consume_token(STAR);
          rhs = primary();
              lhs = new BinaryExpression(lhs, rhs, tokenImage[STAR]);
          break;
        case DIV:
          jj_consume_token(DIV);
          rhs = primary();
              lhs = new BinaryExpression(lhs, rhs, tokenImage[DIV]);
          break;
        default:
          jj_la1[19] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    } catch (ParseException e) {
        System.out.println("Failed to parse multiplicativeExpression");
        e.printStackTrace();
    }
      {if (true) return lhs;}
    throw new Error("Missing return statement in function");
  }

//  Parse an primary
//  primary ::= parExpression
//               | IDENTIFIER [arguments]
//               | IDENTIFIER
//               | literal
//               | qualifiedIdentifier // arguments?
//               | primary [DOT primary]
  final public Node primary() throws ParseException {
    Node expr = null; String id = null; ArrayList<Node> args = null;
    ArrayList<Node> nest = null; Node node = null;
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LPAREN:
        expr = parExpression();
        break;
      default:
        jj_la1[20] = jj_gen;
        if (jj_2_3(2147483647)) {
          expr = qualifiedIdentifier();
        } else if (jj_2_4(2147483647)) {
          jj_consume_token(IDENTIFIER);
                       id = token.image; args = new ArrayList<Node>();
          args = arguments();
          expr = new FunctionCall(id, args);
        } else {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case IDENTIFIER:
            jj_consume_token(IDENTIFIER);
                         expr = new Expression(token.image);
            break;
          case INT_LITERAL:
          case STRING_LITERAL:
            expr = literal();
            break;
          default:
            jj_la1[21] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
        }
      }
    } catch (ParseException e) {
        System.out.println("Failed to parse an expression");
        e.printStackTrace();
    }
      {if (true) return expr;}
    throw new Error("Missing return statement in function");
  }
